<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/seite_typ"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:text="@string/typ"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="20dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:id="@+id/spinnerTyp" />

    <TextView
        android:id="@+id/textView_frage"
        android:layout_width="match_parent"
        android:paddingTop="20dp"
        android:text="@string/text_frage"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/editText_frage"
        android:paddingTop="10dp"
        android:layout_marginLeft="40dp"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <TextView
        android:id="@+id/textView_antwort"
        android:layout_width="match_parent"
        android:paddingTop="20dp"
        android:text="@string/text_antwort"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/editText_antwort"
        android:paddingTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_height="wrap_content" />


</LinearLayout>